--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,39 @@
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-lock.yaml
+package-lock.json
+
+# Env
+.env
+.env.*
+
+# Build outputs
+dist/
+build/
+.next/
+out/
+
+# Logs
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDEs
+.vscode/
+.idea/
+
+# Database
+*.sqlite
+
+# Generated assets
+/public/*.ico
+/public/*.png
+
 node_modules
 dist
 .DS_Store
