--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "process-data": "tsx server/processData.ts",
+    "process-data:full": "tsx server/processData.ts full",
+    "db:reload": "tsx server/clearAndReload.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -48,6 +51,7 @@
     "connect-pg-simple": "^10.0.0",
     "csv-parser": "^3.2.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
@@ -57,6 +61,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "nanoid": "^5.1.6",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
